--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .game-container img {
     padding: 10px;
 }
-.game-container h2, h3 {
+.game-container h2, h3, p {
     padding: 5px;
     font-family: "Jersey 10", sans-serif;
     font-weight: 400;
